--- a/pipelines/release-elect-regression.yml
+++ b/pipelines/release-elect-regression.yml
@@ -1,60 +1,73 @@
+resource_types:
+  - name: gcs-resource
+    type: docker-image
+    source:
+      repository: frodenas/gcs-resource
+
 resources:
-- name: loggregator-release-elect
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/loggregator.git
-    branch: release-elect
-    private_key: {{loggregator-key}}
-    ignore_paths:
-    - .final_builds
-    - releases
+  - name: loggregator-release-elect
+    type: git
+    source:
+      uri: git@github.com:cloudfoundry/loggregator.git
+      branch: release-elect
+      private_key: {{loggregator-key}}
+      ignore_paths:
+        - .final_builds
+        - releases
 
-- name: loggregator-develop
-  type: git
-  source:
-    uri: git@github.com:cloudfoundry/loggregator.git
-    branch: develop
-    private_key: {{loggregator-key}}
-    ignore_paths:
-    - .final_builds
-    - releases
+  - name: loggregator-develop
+    type: git
+    source:
+      uri: git@github.com:cloudfoundry/loggregator.git
+      branch: develop
+      private_key: {{loggregator-key}}
+      ignore_paths:
+      - .final_builds
+      - releases
 
-- name: loggregator-latest
-  type: bosh-io-release
-  source:
-    repository: cloudfoundry/loggregator
+  - name: loggregator-latest
+    type: bosh-io-release
+    source:
+      repository: cloudfoundry/loggregator
 
-- name: deployments-loggregator
-  type: git
-  source: &deployments_loggregator
-    uri: git@github.com:cloudfoundry/deployments-loggregator.git
-    branch: master
-    private_key: {{deployments-loggregator-key}}
+  - name: deployments-loggregator
+    type: git
+    source: &deployments_loggregator
+      uri: git@github.com:cloudfoundry/deployments-loggregator.git
+      branch: master
+      private_key: {{deployments-loggregator-key}}
 
-- name: deployments-loggregator-with-changes
-  type: git
-  source: *deployments_loggregator
+  - name: deployments-loggregator-with-changes
+    type: git
+    source: *deployments_loggregator
 
-- name: cf-deployment
-  type: git
-  source:
-    uri: https://github.com/cloudfoundry/cf-deployment
-    branch: develop
+  - name: cf-deployment
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/cf-deployment
+      branch: develop
 
-- name: cf-deployment-concourse-tasks
-  type: git
-  source:
-    uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
-    branch: v2.1
+  - name: cf-deployment-concourse-tasks
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
+      branch: v2.1
 
-- name: 10m
-  type: time
-  source: {interval: 10m}
+  - name: 5m
+    type: time
+    source: {interval: 5m}
 
-- name: loggregator-ci
-  type: git
-  source:
-    uri: https://github.com/cloudfoundry/loggregator-ci
+  - name: loggregator-ci
+    type: git
+    source:
+      uri: https://github.com/cloudfoundry/loggregator-ci
+
+  - name: regression-test-control
+    type: gcs-resource
+    source:
+      bucket: regression-test-control
+      json_key: {{bbl_gcp_service_account_key}}
+      regexp: timestamp
 
 jobs:
 - name: loggregator-elect-bbl-create
@@ -81,7 +94,6 @@ jobs:
     params:
       repository: updated-bbl-state
       rebase: true
-
 - name: loggregator-elect-bbl-destroy
   plan:
   - get: cf-deployment-concourse-tasks
@@ -97,7 +109,6 @@ jobs:
     params:
       repository: updated-bbl-state
       rebase: true
-
 - name: loggregator-latest-bbl-create
   plan:
   - get: cf-deployment-concourse-tasks
@@ -122,7 +133,6 @@ jobs:
     params:
       repository: updated-bbl-state
       rebase: true
-
 - name: loggregator-latest-bbl-destroy
   plan:
   - get: cf-deployment-concourse-tasks
@@ -139,22 +149,47 @@ jobs:
       repository: updated-bbl-state
       rebase: true
 
-- name: loggregator-elect-deploy
+- name: start-pipeline
   serial: true
   plan:
+  - task: start-pipeline
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source: { repository: ubuntu }
+      outputs:
+      - name: regression-test-control
+      run:
+        path: /bin/bash
+        args:
+        - "-c"
+        - |
+          #!/bin/bash
+          set -ex
+
+          date > regression-test-control/timestamp
+  - put: regression-test-control
+    params:
+      file: regression-test-control/timestamp
+
+
+- name: loggregator-elect-deploy
+  serial: true
+  serial_groups: ["loggregator-elect"]
+  plan:
   - aggregate:
+    - get: regression-test-control
+      passed: ["start-pipeline"]
+      trigger: true
     - get: bbl-state
       resource: deployments-loggregator
-      trigger: false
     - get: cf-deployment
-      trigger: false
     - get: cf-deployment-concourse-tasks
-      trigger: false
     - get: release
       resource: loggregator-release-elect
     - get: vars-store
       resource: deployments-loggregator
-      trigger: false
   - task: upload-stemcell
     file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
     params:
@@ -193,81 +228,21 @@ jobs:
       repository: updated-vars-store
       rebase: true
 
-- name: loggregator-elect-setup
-  serial: true
-  plan:
-  - aggregate:
-    - get: release
-      resource: loggregator-release-elect
-      passed: ["loggregator-elect-deploy"]
-      trigger: true
-    - get: vars-store
-      resource: deployments-loggregator-with-changes
-      passed: ["loggregator-elect-deploy"]
-      trigger: true
-    - get: loggregator
-      resource: loggregator-develop
-      trigger: false
-  - task: setup-environment
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-      params:
-        SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-        VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
-        ORG: cf-lamb
-        SPACE: development
-      inputs:
-      - name: vars-store
-      - name: loggregator
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-          set -ex
-          password=$(grep scim vars-store/$VARS_STORE_FILE | awk '{print $2}')
-
-          cf login -a api.$SYSTEM_DOMAIN -u admin -p $password -o system --skip-ssl-validation
-
-          set +e
-          cf org $ORG
-          set -e
-          if [ $? -eq 0 ]; then
-            cf create-org $ORG
-          fi
-          cf target -o $ORG
-
-          set +e
-          cf space $SPACE
-          set -e
-          if [ $? -eq 0 ]; then
-            cf create-space $SPACE
-          fi
-          cf target -s $SPACE
-
-          pushd loggregator/src/tools/logspinner
-            cf push floodspinner
-          popd
 
 - name: loggregator-latest-deploy
   serial: true
+  serial_groups: ["loggregator-latest"]
   plan:
   - aggregate:
+    - get: regression-test-control
+      passed: ["start-pipeline"]
+      trigger: true
     - get: bbl-state
       resource: deployments-loggregator
-      trigger: false
     - get: cf-deployment
-      trigger: false
     - get: cf-deployment-concourse-tasks
-      trigger: false
     - get: vars-store
       resource: deployments-loggregator
-      trigger: false
     - get: release
       resource: loggregator-latest
   - task: upload-stemcell
@@ -321,81 +296,134 @@ jobs:
       repository: updated-vars-store
       rebase: true
 
-- name: loggregator-latest-setup
+- name: cf-setup
   serial: true
+  serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
   - aggregate:
-    - get: release
-      resource: loggregator-latest
-      passed: ["loggregator-latest-deploy"]
+    - get: regression-test-control
+      passed: ["loggregator-latest-deploy", "loggregator-elect-deploy"]
       trigger: true
     - get: vars-store
       resource: deployments-loggregator-with-changes
-      passed: ["loggregator-latest-deploy"]
-      trigger: true
     - get: loggregator
       resource: loggregator-develop
-      trigger: false
-  - task: setup-environment
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
-      params:
-        SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-        VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
-        ORG: cf-lamb
-        SPACE: development
-      inputs:
-      - name: vars-store
-      - name: loggregator
-      run:
-        path: bash
-        args:
-        - -c
-        - |
-          #!/bin/bash
-          set -ex
-          password=$(grep scim vars-store/$VARS_STORE_FILE | awk '{print $2}')
+    - get: release-elect
+      passed:
+        - loggregator-elect-deploy
+      resource: loggregator-release-elect
+    - get: release-latest
+      passed:
+        - loggregator-latest-deploy
+      resource: loggregator-latest
+  - aggregate:
+    - task: setup-loggregator-elect
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+        params:
+          SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+          VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+          ORG: cf-lamb
+          SPACE: development
+        inputs:
+        - name: vars-store
+        - name: loggregator
+        run:
+          path: bash
+          args:
+          - -c
+          - |
+            #!/bin/bash
+            set -ex
+            password=$(grep scim vars-store/$VARS_STORE_FILE | awk '{print $2}')
 
-          cf login -a api.$SYSTEM_DOMAIN -u admin -p $password -o system --skip-ssl-validation
+            cf login -a api.$SYSTEM_DOMAIN -u admin -p $password -o system --skip-ssl-validation
 
-          set +e
-          cf org $ORG
-          set -e
-          if [ $? -eq 0 ]; then
-            cf create-org $ORG
-          fi
-          cf target -o $ORG
+            set +e
+            cf org $ORG
+            set -e
+            if [ $? -eq 0 ]; then
+              cf create-org $ORG
+            fi
+            cf target -o $ORG
 
-          set +e
-          cf space $SPACE
-          set -e
-          if [ $? -eq 0 ]; then
-            cf create-space $SPACE
-          fi
-          cf target -s $SPACE
+            set +e
+            cf space $SPACE
+            set -e
+            if [ $? -eq 0 ]; then
+              cf create-space $SPACE
+            fi
+            cf target -s $SPACE
 
-          pushd loggregator/src/tools/logspinner
-            cf push floodspinner
-          popd
+            pushd loggregator/src/tools/logspinner
+              cf push floodspinner
+            popd
+    - task: setup-loggregator-latest
+      config:
+        platform: linux
+        image_resource:
+          type: docker-image
+          source:
+            repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+        params:
+          SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+          VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+          ORG: cf-lamb
+          SPACE: development
+        inputs:
+        - name: vars-store
+        - name: loggregator
+        run:
+          path: bash
+          args:
+          - -c
+          - |
+            #!/bin/bash
+            set -ex
+            password=$(grep scim vars-store/$VARS_STORE_FILE | awk '{print $2}')
+
+            cf login -a api.$SYSTEM_DOMAIN -u admin -p $password -o system --skip-ssl-validation
+
+            set +e
+            cf org $ORG
+            set -e
+            if [ $? -eq 0 ]; then
+              cf create-org $ORG
+            fi
+            cf target -o $ORG
+
+            set +e
+            cf space $SPACE
+            set -e
+            if [ $? -eq 0 ]; then
+              cf create-space $SPACE
+            fi
+            cf target -s $SPACE
+
+            pushd loggregator/src/tools/logspinner
+              cf push floodspinner
+            popd
 
 - name: setup-datadog
   serial: true
+  serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
   - aggregate:
+    - get: regression-test-control
+      passed: ["cf-setup"]
+      trigger: true
     - get: release-latest
       resource: loggregator-latest
       passed:
-      - loggregator-latest-setup
-      trigger: true
+      - cf-setup
     - get: release-elect
       resource: loggregator-release-elect
       passed:
-      - loggregator-elect-setup
-      trigger: true
+      - cf-setup
   - task: setup-dashboard
     config:
       platform: linux
@@ -432,12 +460,12 @@ jobs:
             "read_only": "True",
             "graphs" : [
               {
-                "viz": "query_value",
-                "title": "Release Elect Version vs Previous Version % Improvement Average",
+                "title": "Release Elect Version vs Previous Version % Improvement",
                 "definition": {
+                  "viz": "query_value",
                   "requests": [
                     {
-                      "q": "( ( avg:smoke_test.loggregator.msg_count{floodspinner,host:api.$ELECT_SYSTEM_DOMAIN} / avg:smoke_test.loggregator.cycles{floodspinner} ) - ( avg:smoke_test.loggregator.msg_count{floodspinner,host:api.$LATEST_SYSTEM_DOMAIN} / avg:smoke_test.loggregator.cycles{floodspinner} ) ) * 100",
+                      "q": "( ( avg:regression.smoke_test.loggregator.msg_count{floodspinner,host:api.$ELECT_SYSTEM_DOMAIN} / avg:regression.smoke_test.loggregator.cycles{floodspinner} ) - ( avg:regression.smoke_test.loggregator.msg_count{floodspinner,host:api.$LATEST_SYSTEM_DOMAIN} / avg:regression.smoke_test.loggregator.cycles{floodspinner} ) ) * 100",
                       "aggregator": "avg",
                       "conditional_formats": [
                         {
@@ -468,11 +496,11 @@ jobs:
               },
               {
                 "title": "Floodspinner Release Elect and Previous Release",
-                "viz": "timeseries",
                 "definition": {
+                  "viz": "timeseries",
                   "requests": [
                     {
-                      "q": "avg:smoke_test.loggregator.msg_count{floodspinner,host:api.$ELECT_SYSTEM_DOMAIN}",
+                      "q": "avg:regression.smoke_test.loggregator.msg_count{floodspinner,host:api.$ELECT_SYSTEM_DOMAIN}",
                       "style": {
                         "palette": "cool",
                         "width": "thin"
@@ -482,7 +510,7 @@ jobs:
                       "aggregator": "avg"
                     },
                     {
-                      "q": "avg:smoke_test.loggregator.msg_count{floodspinner,host:api.$LATEST_SYSTEM_DOMAIN}",
+                      "q": "avg:regression.smoke_test.loggregator.msg_count{floodspinner,host:api.$LATEST_SYSTEM_DOMAIN}",
                       "style": {
                         "palette": "cool",
                         "width": "thin"
@@ -495,11 +523,11 @@ jobs:
               },
               {
                 "title": "Release Elect Version vs Previous Version % Improvement",
-                "viz": "timeseries",
                 "definition": {
+                  "viz": "timeseries",
                   "requests": [
                     {
-                      "q": "( ( avg:smoke_test.loggregator.msg_count{floodspinner,host:api.$ELECT_SYSTEM_DOMAIN} / avg:smoke_test.loggregator.cycles{floodspinner} ) - ( avg:smoke_test.loggregator.msg_count{floodspinner,host:api.$LATEST_SYSTEM_DOMAIN} / avg:smoke_test.loggregator.cycles{floodspinner} ) ) * 100",
+                      "q": "( ( avg:regression.smoke_test.loggregator.msg_count{floodspinner,host:api.$ELECT_SYSTEM_DOMAIN} / avg:regression.smoke_test.loggregator.cycles{floodspinner} ) - ( avg:regression.smoke_test.loggregator.msg_count{floodspinner,host:api.$LATEST_SYSTEM_DOMAIN} / avg:regression.smoke_test.loggregator.cycles{floodspinner} ) ) * 100",
                       "aggregator": "avg",
                       "style": {
                         "palette": "cool",
@@ -527,56 +555,54 @@ jobs:
 
           curl "https://app.datadoghq.com/api/v1/dash?api_key=${DATADOG_API_KEY}&application_key=${DATADOG_APP_KEY}" -X POST -H "Content-type: application/json" -d "@/tmp/request-body.json"
 
-- name: elect-floodspinner
+- name: smoke-tests
   serial: true
+  serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
   - aggregate:
+    - get: regression-test-control
+      passed: ["setup-datadog"]
+      trigger: true
     - get: release-elect
       resource: loggregator-release-elect
       passed:
       - setup-datadog
-      trigger: true
-    - get: loggregator-ci
-  - get: 10m
-    trigger: true
-  - task: run-smoke-tests
-    file: loggregator-ci/tasks/cf-logs-smoke-test.yml
-    params:
-      CYCLES: 10000
-      DELAY: "2"
-      DELAY_UNIT: "us"
-      MESSAGE: "FIFTEEN-MINUTE"
-      APP_NAME: "floodspinner"
-      WAIT: 60
-      API_ENDPOINT: api.loggregator-elect.cf-app.com
-      USERNAME: admin
-      PASSWORD: {{loggregator-elect-password}}
-      DATADOG_API_KEY: {{datadog-dev-api-key}}
-      SKIP_SSL_VALIDATION: true
-
-- name: latest-floodspinner
-  serial: true
-  plan:
-  - aggregate:
     - get: release-latest
       resource: loggregator-latest
       passed:
       - setup-datadog
-      trigger: true
     - get: loggregator-ci
-  - get: 10m
+  - get: 5m
     trigger: true
-  - task: run-smoke-tests
-    file: loggregator-ci/tasks/cf-logs-smoke-test.yml
-    params:
-      CYCLES: 10000
-      DELAY: "2"
-      DELAY_UNIT: "us"
-      MESSAGE: "FIFTEEN-MINUTE"
-      APP_NAME: "floodspinner"
-      WAIT: 60
-      API_ENDPOINT: api.loggregator-latest.cf-app.com
-      USERNAME: admin
-      PASSWORD: {{loggregator-latest-password}}
-      DATADOG_API_KEY: {{datadog-dev-api-key}}
-      SKIP_SSL_VALIDATION: true
+  - aggregate:
+    - task: loggregator-elect
+      file: loggregator-ci/tasks/cf-logs-smoke-test.yml
+      params:
+        PREFIX: "regression."
+        CYCLES: 10000
+        DELAY: "2"
+        DELAY_UNIT: "us"
+        MESSAGE: "FIFTEEN-MINUTE"
+        APP_NAME: "floodspinner"
+        WAIT: 60
+        API_ENDPOINT: api.loggregator-elect.cf-app.com
+        USERNAME: admin
+        PASSWORD: {{loggregator-elect-password}}
+        DATADOG_API_KEY: {{datadog-dev-api-key}}
+        SKIP_SSL_VALIDATION: true
+    - task: loggregator-latest
+      file: loggregator-ci/tasks/cf-logs-smoke-test.yml
+      params:
+        PREFIX: "regression."
+        CYCLES: 10000
+        DELAY: "2"
+        DELAY_UNIT: "us"
+        MESSAGE: "FIFTEEN-MINUTE"
+        APP_NAME: "floodspinner"
+        WAIT: 60
+        API_ENDPOINT: api.loggregator-latest.cf-app.com
+        USERNAME: admin
+        PASSWORD: {{loggregator-latest-password}}
+        DATADOG_API_KEY: {{datadog-dev-api-key}}
+        SKIP_SSL_VALIDATION: true
+
