--- a/pipelines/release-elect-regression.yml
+++ b/pipelines/release-elect-regression.yml
@@ -69,14 +69,6 @@ resources:
       json_key: {{bbl_gcp_service_account_key}}
       regexp: timestamp-(.*)
 
-  - name: pipeline-lock
-    type: pool
-    source:
-      uri: git@github.com:cloudfoundry-incubator/locks.git
-      branch: master
-      pool: release-elect-regression-pipeline
-      private_key: {{loggregator-key}}
-
 jobs:
 - name: loggregator-elect-bbl-create
   plan:
@@ -182,17 +174,12 @@ jobs:
   - put: regression-test-control
     params:
       file: regression-test-control/timestamp-*
-  - put: pipeline-lock
-    params: {acquire: true}
-
 
 - name: loggregator-elect-deploy
   serial: true
   serial_groups: ["loggregator-elect"]
   plan:
   - aggregate:
-    - put: pipeline-lock
-      passed: ["start-pipeline"]
     - get: regression-test-control
       passed: ["start-pipeline"]
       trigger: true
@@ -248,8 +235,6 @@ jobs:
   serial_groups: ["loggregator-latest"]
   plan:
   - aggregate:
-    - put: pipeline-lock
-      passed: ["start-pipeline"]
     - get: regression-test-control
       passed: ["start-pipeline"]
       trigger: true
@@ -317,8 +302,6 @@ jobs:
   serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
   - aggregate:
-    - put: pipeline-lock
-      passed: ["loggregator-latest-deploy", "loggregator-elect-deploy"]
     - get: regression-test-control
       passed: ["loggregator-latest-deploy", "loggregator-elect-deploy"]
       trigger: true
@@ -356,8 +339,6 @@ jobs:
   serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
   - aggregate:
-    - get: pipeline-lock
-      passed: ["setup-datadog"]
     - get: regression-test-control
       passed: ["cf-setup"]
       trigger: true
@@ -377,59 +358,98 @@ jobs:
       DATADOG_APP_KEY: {{datadog-dev-app-key}}
       LATEST_SYSTEM_DOMAIN: loggregator-latest.cf-app.com
       ELECT_SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-  - put: pipeline-lock
-    params: {release: pipeline-lock}
 
 - name: smoke-tests
   serial: true
   serial_groups: ["loggregator-elect", "loggregator-latest"]
   plan:
-  - aggregate:
-    - get: pipeline-lock
-      passed: ["setup-datadog"]
-    - get: regression-test-control
-      passed: ["setup-datadog"]
+    - aggregate:
+      - get: regression-test-control
+        passed: ["setup-datadog"]
+        trigger: true
+      - get: release-elect
+        resource: loggregator-release-elect
+        passed:
+        - setup-datadog
+      - get: release-latest
+        resource: loggregator-latest
+        passed:
+        - setup-datadog
+      - get: loggregator-ci
+    - get: 5m
       trigger: true
-    - get: release-elect
-      resource: loggregator-release-elect
-      passed:
-      - setup-datadog
-    - get: release-latest
-      resource: loggregator-latest
-      passed:
-      - setup-datadog
-    - get: loggregator-ci
-  - get: 5m
-    trigger: true
-  - aggregate:
-    - task: loggregator-elect
-      file: loggregator-ci/tasks/cf-logs-smoke-test.yml
-      params:
-        PREFIX: "regression."
-        CYCLES: 10000
-        DELAY: "2"
-        DELAY_UNIT: "us"
-        MESSAGE: "FIFTEEN-MINUTE"
-        APP_NAME: "floodspinner"
-        WAIT: 60
-        API_ENDPOINT: api.loggregator-elect.cf-app.com
-        USERNAME: admin
-        PASSWORD: {{loggregator-elect-password}}
-        DATADOG_API_KEY: {{datadog-dev-api-key}}
-        SKIP_SSL_VALIDATION: true
-    - task: loggregator-latest
-      file: loggregator-ci/tasks/cf-logs-smoke-test.yml
-      params:
-        PREFIX: "regression."
-        CYCLES: 10000
-        DELAY: "2"
-        DELAY_UNIT: "us"
-        MESSAGE: "FIFTEEN-MINUTE"
-        APP_NAME: "floodspinner"
-        WAIT: 60
-        API_ENDPOINT: api.loggregator-latest.cf-app.com
-        USERNAME: admin
-        PASSWORD: {{loggregator-latest-password}}
-        DATADOG_API_KEY: {{datadog-dev-api-key}}
-        SKIP_SSL_VALIDATION: true
+    - aggregate:
+      - do:
+        - task: get-release-version
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: loggregator/bosh20
+            inputs:
+              - name: release-elect
+            outputs:
+              - name: release-info
+            run:
+              path: bash
+              args:
+              - -c
+              - |
+                #/bin/bash
+                set -ex
+
+                cd release-elect
+                git rev-parse HEAD > ../release-info/version
+        - task: loggregator-elect
+          file: loggregator-ci/tasks/cf-logs-smoke-test.yml
+          params:
+            PREFIX: "regression."
+            CYCLES: 10000
+            DELAY: "2"
+            DELAY_UNIT: "us"
+            MESSAGE: "FIFTEEN-MINUTE"
+            APP_NAME: "floodspinner"
+            WAIT: 60
+            API_ENDPOINT: api.loggregator-elect.cf-app.com
+            USERNAME: admin
+            PASSWORD: {{loggregator-elect-password}}
+            DATADOG_API_KEY: {{datadog-dev-api-key}}
+            SKIP_SSL_VALIDATION: true
+      - do:
+        - task: get-release-version
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: loggregator/bosh20
+            inputs:
+              - name: release-latest
+            outputs:
+              - name: release-info
+            run:
+              path: bash
+              args:
+              - -c
+              - |
+                #/bin/bash
+                set -ex
+
+                cp release-latest/version release-info/version
+        - task: loggregator-latest
+          file: loggregator-ci/tasks/cf-logs-smoke-test.yml
+          params:
+            PREFIX: "regression."
+            CYCLES: 10000
+            DELAY: "2"
+            DELAY_UNIT: "us"
+            MESSAGE: "FIFTEEN-MINUTE"
+            APP_NAME: "floodspinner"
+            WAIT: 60
+            API_ENDPOINT: api.loggregator-latest.cf-app.com
+            USERNAME: admin
+            PASSWORD: {{loggregator-latest-password}}
+            DATADOG_API_KEY: {{datadog-dev-api-key}}
+            SKIP_SSL_VALIDATION: true
 
