--- a/tasks/cf-logs-smoke-test.yml
+++ b/tasks/cf-logs-smoke-test.yml
@@ -17,7 +17,7 @@ run:
         -u $USERNAME \
         -p $PASSWORD \
         -s development \
-        -o cf-lamb --skip-ssl-validation
+        -o $ORG_NAME --skip-ssl-validation
 
     # cf logs to a file
     rm -f output.txt
