--- a/pipelines/smoke-tests.yml
+++ b/pipelines/smoke-tests.yml
@@ -25,16 +25,17 @@ jobs:
   - task: run-smoke-tests
     file: loggregator-ci/tasks/cf-logs-smoke-test.yml
     params:
+      API_ENDPOINT: api.run.pivotal.io
+      APP_NAME: "floodspinner"
       CYCLES: 10000
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
       DELAY: "2"
       DELAY_UNIT: "us"
       MESSAGE: "FIFTEEN-MINUTE"
-      APP_NAME: "floodspinner"
-      WAIT: 60
-      API_ENDPOINT: api.run.pivotal.io
-      USERNAME: {{pws-username}}
+      ORG_NAME: cf-lamb
       PASSWORD: {{pws-password}}
-      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      USERNAME: {{pws-username}}
+      WAIT: 60
 - name: trkr-cf-logs-floodspinner-smoke-test
   public: false
   serial: true
@@ -45,16 +46,17 @@ jobs:
   - task: run-smoke-tests
     file: loggregator-ci/tasks/cf-logs-smoke-test.yml
     params:
+      API_ENDPOINT: api.aws.trackerred.com
+      APP_NAME: "trkr-floodspinner"
       CYCLES: 10000
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
       DELAY: "2"
       DELAY_UNIT: "us"
       MESSAGE: "FIFTEEN-MINUTE"
-      APP_NAME: "trkr-floodspinner"
       ORG_NAME: loggregator
-      WAIT: 60
-      USERNAME: {{trkr-username}}
       PASSWORD: {{trkr-password}}
-      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      USERNAME: {{trkr-username}}
+      WAIT: 60
 - name: pws-cf-logs-dripspinner-smoke-test
   public: false
   serial: true
@@ -65,16 +67,17 @@ jobs:
   - task: run-smoke-tests
     file: loggregator-ci/tasks/cf-logs-smoke-test.yml
     params:
+      API_ENDPOINT: api.run.pivotal.io
+      APP_NAME: "dripspinner"
       CYCLES: 1000
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
       DELAY: "500"
       DELAY_UNIT: "ms"
       MESSAGE: "HOURLY"
-      APP_NAME: "dripspinner"
-      WAIT: 600
-      API_ENDPOINT: api.run.pivotal.io
-      USERNAME: {{pws-username}}
+      ORG_NAME: cf-lamb
       PASSWORD: {{pws-password}}
-      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      USERNAME: {{pws-username}}
+      WAIT: 600
 - name: trkr-cf-logs-dripspinner-smoke-test
   public: false
   serial: true
@@ -85,16 +88,17 @@ jobs:
   - task: run-smoke-tests
     file: loggregator-ci/tasks/cf-logs-smoke-test.yml
     params:
+      API_ENDPOINT: api.aws.trackerred.com
+      APP_NAME: "trkr-dripspinner"
       CYCLES: 1000
+      DATADOG_API_KEY: {{datadog-prod-api-key}}
       DELAY: "500"
       DELAY_UNIT: "ms"
       MESSAGE: "HOURLY"
-      APP_NAME: "trkr-dripspinner"
       ORG_NAME: loggregator
-      WAIT: 600
-      USERNAME: {{trkr-username}}
       PASSWORD: {{trkr-password}}
-      DATADOG_API_KEY: {{datadog-prod-api-key}}
+      USERNAME: {{trkr-username}}
+      WAIT: 600
 
 - name: pws-scalable-syslog-https-drain-smoke-test
   public: false
@@ -107,20 +111,20 @@ jobs:
   - task: v1-drain-smoke-tests
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
     params:
-      CF_SYSTEM_DOMAIN: run.pivotal.io
-      CF_USERNAME: {{pws-username}}
+      CF_ORG: cf-lamb
       CF_PASSWORD: {{pws-password}}
       CF_SPACE: development
-      CF_ORG: cf-lamb
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
       DATADOG_API_KEY: {{datadog-prod-api-key}}
       DRAIN_VERSION: "1.0"
   - task: v2-drain-smoke-tests
     file: loggregator-ci/tasks/scalable-syslog-smoke-test.yml
     params:
-      CF_SYSTEM_DOMAIN: run.pivotal.io
-      CF_USERNAME: {{pws-username}}
+      CF_ORG: cf-lamb
       CF_PASSWORD: {{pws-password}}
       CF_SPACE: development
-      CF_ORG: cf-lamb
+      CF_SYSTEM_DOMAIN: run.pivotal.io
+      CF_USERNAME: {{pws-username}}
       DATADOG_API_KEY: {{datadog-prod-api-key}}
       DRAIN_VERSION: "2.0"
