--- a/pipelines/scalable-syslog.yml
+++ b/pipelines/scalable-syslog.yml
@@ -3,7 +3,7 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry-incubator/scalable-syslog-release
-    branch: master
+    branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
     ignore_paths:
     - .final_builds
