--- a/pipelines/release.yml
+++ b/pipelines/release.yml
@@ -52,8 +52,56 @@ resources:
     branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
 
+- name: scalable-syslog-release-develop
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/scalable-syslog-release
+    branch: develop
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: scalable-syslog-release-final-develop
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/scalable-syslog-release
+    branch: develop
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: scalable-syslog-release-master
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/scalable-syslog-release
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: scalable-syslog-release-final-master
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/scalable-syslog-release
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
+    ignore_paths:
+    - .final_builds
+    - releases
+
+- name: scalable-syslog-release-github-release-drafts
+  type: github-release
+  source:
+    user: cloudfoundry-incubator
+    repository: scalable-syslog-release
+    access_token: {{access-token}}
+    drafts: true
+
 jobs:
-- name: create-final-release
+- name: loggregator-create-final-release
   serial: true
   plan:
   - aggregate:
@@ -173,11 +221,11 @@ jobs:
       globs:
       - github-release/*.tgz
 
-- name: bump-cf-release
+- name: loggregator-bump-cf-release
   plan:
     - get: loggregator-master
       resource: loggregator-final-release-master
-      passed: [create-final-release]
+      passed: ["loggregator-create-final-release"]
     - get: cf-release
     - task: bump-submodule
       config:
@@ -229,3 +277,121 @@ jobs:
       params:
         rebase: true
         repository: cf-release-bump
+
+- name: scalable-syslog-create-final-release
+  serial: true
+  plan:
+  - aggregate:
+    - get: scalable-syslog-release-develop
+    - get: scalable-syslog-release-master
+  - task: create-final-release
+    config:
+      image_resource:
+        type: docker-image
+        source:
+        - repository: loggregator/bosh20
+      platform: linux
+      params:
+        S3_ACCESS_KEY: {{s3-access-key-id}}
+        S3_SECRET_KEY: {{s3-secret-access-key}}
+        SSH_KEY: {{cf-loggregator-oauth-bot-key}}
+        NEW_VERSION: 1
+      inputs:
+      - name: scalable-syslog-release-develop
+      - name: scalable-syslog-release-master
+      outputs:
+      - name: github-release
+      - name: create-final-release
+      run:
+        path: bash
+        args:
+          - -c
+          - |
+            #!/bin/bash
+            set -ex
+
+            # establish version/tag strings
+            new_version="$NEW_VERSION"
+            tag_name="v$new_version"
+
+            # write out github release files
+            echo "Scalable Syslog $new_version" > github-release/name
+            echo $tag_name > github-release/tag
+            echo "TBD" > github-release/body
+
+            # setup git for committing
+            git config --global user.email "cf-loggregator@pivotal.io"
+            git config --global user.name "Loggregator CI"
+
+            # setup ssh for reading from github
+            eval "$(ssh-agent -s)"
+            mkdir -p ~/.ssh
+            echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+            ssh-add <(echo "$SSH_KEY")
+
+            # build final release on master
+            pushd scalable-syslog-release-master
+              # this is needed to land commits on master since the commit for
+              # master is checked out as a detatched head when the git
+              # resource clones it down
+              git checkout master
+
+              # setup private.yml used by `create-release --final`
+              cat << EOF > config/private.yml
+            ---
+            blobstore:
+              provider: s3
+              options:
+                bucket_name: scalable-syslog-release-blobs
+                access_key_id: $S3_ACCESS_KEY
+                secret_access_key: $S3_SECRET_KEY
+                credentials_source: static
+            EOF
+
+              # create final release and commit artifcats
+              bosh -n create-release --final \
+                --tarball ../github-release/release.tgz \
+                --version $new_version
+              git add .
+              git commit -m "Create final release\
+
+
+            [ci skip]"
+
+              final_release_abbrev=$(git rev-parse --abbrev-ref HEAD)
+              final_release_sha=$(git rev-parse HEAD)
+              git tag "$tag_name" $final_release_sha
+            popd
+
+            # merge final release artifacts with develop
+            pushd scalable-syslog-release-develop
+              # this is needed to land commits on develop since the commit for
+              # develop is checked out as a detatched head when the git
+              # resource clones it down
+              git checkout develop
+
+              git remote add -f master-repo ../scalable-syslog-release-master
+              git pull
+              git merge -v -m "Merge final release artifacts\
+
+
+            [ci skip]" "master-repo/$final_release_abbrev"
+            popd
+
+            # copy repos into output
+            cp -r scalable-syslog-release-develop scalable-syslog-release-master create-final-release
+  - put: scalable-syslog-release-final-master
+    params:
+      repository: create-final-release/scalable-syslog-release-master
+      rebase: false
+  - put: scalable-syslog-release-final-develop
+    params:
+      repository: create-final-release/scalable-syslog-release-develop
+      rebase: false
+  - put: scalable-syslog-release-github-release-drafts
+    params:
+      name: github-release/name
+      tag: github-release/tag
+      body: github-release/body
+      globs:
+      - github-release/*.tgz
