Rebase scalable-syslog-release before put
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/scalable-syslog.yml
+++ b/pipelines/scalable-syslog.yml
@@ -151,7 +151,7 @@ jobs:
   - put: scalable-syslog-release
     params:
       repository: bumped-scalable-syslog-release
-      rebase: false
+      rebase: true
 
 - name: scalable-syslog-deploy
   serial: true
