Rebase promotion a well
Signed-off-by: Jason Keene <jkeene@pivotal.io>

--- a/pipelines/scalable-syslog.yml
+++ b/pipelines/scalable-syslog.yml
@@ -401,4 +401,4 @@ jobs:
   - put: scalable-syslog-release-release-elect
     params:
       repository: promote-develop
-      rebase: false
+      rebase: true
